# scape-xcorrsound

./: CMakeLists.txt  CONSUMPTION.md  CONTRIBUTE.md  HenrikSivertsenProject.md  README.md  changelog  indexAll.md  ismir_search.sh  runIsmirIndex.sh  scape-xcorrsound-index-started-on-abr-pc.md  scape-xcorrsound-index-started-on-abr-pc.txt  sonar-project.properties
apps/: CMakeLists.txt  ismir_build_index.cc  ismir_impl.cc  ismir_merge.cc  ismir_query.cc  sound_match.cpp
libs/sound_index/: computeFFT.h  fingerprint_db.cc  fingerprint_db.hh  fingerprint_strategy_ismir.cc
man/man1/: CMakeLists.txt  ismir_build_index.1.ronn  ismir_merge.1.ronn  ismir_query.1.ronn  overlap-analysis.1.ronn  sound-match.1.ronn  waveform-compare.1.ronn
tests/: integrationTests.sh  waveformCompareFail1Test.sh  waveformCompareSuccess1Test.sh
